Refactoring Challenge Domains and JPAEntities To Hexagonal Architecture